--- a/lesson2/styles/card3.css
+++ b/lesson2/styles/card3.css
@@ -1,12 +1,12 @@
 body{
     background-color: #53BAD1;
-    margin-top:30px;
 }
 h3{
     height: 2rem;
     color: darkorange;
 }
 .main-container {
+    margin: 30px;
     display:flex;
     flex-wrap: wrap;
     flex-direction: row;
